# cloudmonitoring_exemplar

./: create_metric.py  pyproject.toml  requirements.txt
